--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Tomorrow Luxury Property</title>
   </head>
   <body>
     <noscript>
