--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,11 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Tomorrow Luxury Property Dubai | Buy and Sell Real Estate</title>
+    <title>Exclusive Dubai Luxury Real Estate - Tomorrow Luxury Property</title>
+    <meta
+      name="keywords"
+      content="dubai, property, sale, properties for sale in dubai, luxury, exclusive properties in dubai, tomorrow luxury property"
+    />
   </head>
   <body>
     <noscript>
