--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,10 +20,25 @@
       rel="stylesheet"
     />
     <title>Exclusive Dubai Luxury Real Estate - Tomorrow Luxury Property</title>
+
     <meta
       name="keywords"
       content="dubai, property, sale, properties for sale in dubai, luxury, exclusive properties in dubai, tomorrow luxury property"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-P3VV6128Q9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-P3VV6128Q9");
+    </script>
   </head>
   <body>
     <noscript>
