--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -25,6 +25,10 @@
       name="keywords"
       content="dubai, property, sale, properties for sale in dubai, luxury, exclusive properties in dubai, tomorrow luxury property"
     />
+    <meta
+      name="description"
+      content="Enhance your property journey with Tomorrow Luxury Property. Collaborate with our expert real estate agents to discover the perfect luxury home or apartment for you"
+    />
     <!-- Google tag (gtag.js) -->
     <script
       async
@@ -42,11 +46,11 @@
   </head>
   <body>
     <noscript>
-      <strong
-        >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-        properly without JavaScript enabled. Please enable it to
-        continue.</strong
-      >
+      <strong>
+        Enhance your property journey with Tomorrow Luxury Property. Collaborate
+        with our expert real estate agents to discover the perfect luxury home
+        or apartment for you
+      </strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
